
-BUG FIX: Miscellaneous (minor)

-Scheduled maintenance routine, that deletes any prices charts left over, after DELETING AN ASSET from the Admin Area: "Asset Tracking => Portfolio Assets"

-Minor user experience improvements / runtime optimizations

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.04

-BUG FIX: MAJOR fixes / refactoring / optimizations to the BTC value conversion function (used to convert / determine values between Currencies and other Cryptos, everywhere in this app)

-BUG FIX: Fixed CoinGecko marketcap data being mapped to the wrong coin (with the SAME TICKER...now 'app id' is used, instead of ticker)

-BUG FIX: Miscellaneous (minor)

-Secured / optimized the Access Stats feature (in Admin Area => System Monitoring), to run from /cache/secured/, and run faster

-Added "Referrer" data for Access Stats (shows what page the visit initiated from, if available)

-Accurate coingecko currency support (currency list is now retrieved from their API)

-Secured 'address-balance-tracker' plugin's cache data, to run from /cache/secured/

-Added BUNDLED Access Stats (PER IP ADDRESS stats are also still available)

-Significant user experience improvements / runtime optimizations

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.05

-BUG FIX: Fixed occasional blanked out screen in user area, due to lack of data set checks, before data parsing within coingecko's available currencies list

-Optimized / refactored API throttling system

-------------------------------------------------------------------






